src/test/ui/compile-fail-migration/expanded-cfg.stderr
error: compilation successful
  --> $DIR/expanded-cfg.rs:32:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

